lidar almost finished